--- a/MainPage/static/MainPage/css/main.css
+++ b/MainPage/static/MainPage/css/main.css
@@ -1023,6 +1023,7 @@ input[type="email"],
 input[type="tel"],
 input[type="search"],
 input[type="url"],
+input[type="number"],
 select,
 textarea {
   -moz-appearance: none;
@@ -1045,6 +1046,7 @@ textarea {
   input[type="tel"]:invalid,
   input[type="search"]:invalid,
   input[type="url"]:invalid,
+  input[type="number"]:invalid,
   select:invalid,
   textarea:invalid {
     box-shadow: none; }
@@ -1054,6 +1056,7 @@ textarea {
   input[type="tel"]:focus,
   input[type="search"]:focus,
   input[type="url"]:focus,
+  input[type="number"]:focus,
   select:focus,
   textarea:focus {
     border-color: #f56a6a;
@@ -1081,6 +1084,7 @@ input[type="email"],
 input[type="tel"],
 input[type="search"],
 input[type="url"],
+input[type="number"],
 select {
   height: 2.75em; }
 
