--- a/MainPage/templates/MainPage/index.html
+++ b/MainPage/templates/MainPage/index.html
@@ -28,51 +28,51 @@
 								<div class="row gtr-uniform">
 									<div class="row gtr-200">
 										<div class="col-12-xsmall">
-											<select name="sex" id="sex">
+											<select name="sex" id="sex" required>
 												<option value="">Пол</option>
 												<option value="1">Мужской</option>
 												<option value="2">Женский</option>
 											</select>
 										</div>
 										<div class="col-12-xsmall">
-											<input type="number" step="1" max="150" name="age" id="age" value="" placeholder="Возраст" />
+											<input type="number" step="1" max="150" required name="age" id="age" value="" placeholder="Возраст" />
 										</div>
 										<div class="col-12-xsmall">
-											<input type="number" step="0.01" name="IN_T" id="IN_T" value="" placeholder="Вдох T" />
+											<input type="number" step="0.01" required name="IN_T" id="IN_T" value="" placeholder="Вдох T" />
 										</div>
 										<div class="col-12-xsmall">
-											<input type="number" step="0.01" name="IN_P" id="IN_P" value="" placeholder="Вдох P" />
+											<input type="number" step="0.01" required name="IN_P" id="IN_P" value="" placeholder="Вдох P" />
 										</div>
 									</div>
 									<div class="row gtr-uniform">
 										<div class="row gtr-200">
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="IN_P1" id="IN_P1" value="" placeholder="Вдох P1" />
+												<input type="number" step="0.01" required name="IN_P1" id="IN_P1" value="" placeholder="Вдох P1" />
 											</div>
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="IN_P2" id="IN_P2" value="" placeholder="Вдох P2" />
+												<input type="number" step="0.01" required name="IN_P2" id="IN_P2" value="" placeholder="Вдох P2" />
 											</div>
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="IN_P3" id="IN_P3" value="" placeholder="Вдох P3" />
+												<input type="number" step="0.01" required name="IN_P3" id="IN_P3" value="" placeholder="Вдох P3" />
 											</div>
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="OUT_T" id="OUT_T" value="" placeholder="Выдох T" />
+												<input type="number" step="0.01" required name="OUT_T" id="OUT_T" value="" placeholder="Выдох T" />
 											</div>
 										</div>
 									</div>
 									<div class="row gtr-uniform">
 										<div class="row gtr-200">
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="OUT_P" id="OUT_P" value="" placeholder="Выдох P" />
+												<input type="number" step="0.01" required name="OUT_P" id="OUT_P" value="" placeholder="Выдох P" />
 											</div>
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="OUT_P1" id="OUT_P1" value="" placeholder="Выдох P1" />
+												<input type="number" step="0.01" required name="OUT_P1" id="OUT_P1" value="" placeholder="Выдох P1" />
 											</div>
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="OUT_P2" id="OUT_P2" value="" placeholder="Выдох P2" />
+												<input type="number" step="0.01" required name="OUT_P2" id="OUT_P2" value="" placeholder="Выдох P2" />
 											</div>
 											<div class="col-12-xsmall">
-												<input type="number" step="0.01" name="OUT_P3" id="OUT_P3" value="" placeholder="Выдох P3" />
+												<input type="number" step="0.01" required name="OUT_P3" id="OUT_P3" value="" placeholder="Выдох P3" />
 											</div>
 										</div>
 									</div>
